-fixed some bugs -added unit test -made Java 1.8 compatible